--- a/topTracks.css
+++ b/topTracks.css
@@ -15,7 +15,7 @@ body {
 header {
     background-color: rgb(183, 39, 183); /* Change header background color to purple */
     color: pink; /* Change header text color to pink */
-    padding: 0 0 20px;
+    padding: 20px;
 }
 
 p{
@@ -71,7 +71,7 @@ p{
     display:inline-block;
     height:100px;
     border-radius:10px;
-    padding: 20px 20px;
+    padding: 0 20px;
 }
 
 .trackGenre {
